--- a/manifest.json
+++ b/manifest.json
@@ -17,8 +17,7 @@
 		"key": "token",
 		"name": "Token",
 		"description": "Azure DevOps personal access token to access the API",
-		"example": "b09f673szz38f1s75hc6hv1hl3etz7cyimgc796dkmyl033ks7mr",
-		"type": "text",
+		"type": "password",
 		"required": true
 	}],
 	"rule": {
