--- a/elmah.io.apps.azureboards.nuspec
+++ b/elmah.io.apps.azureboards.nuspec
@@ -6,12 +6,13 @@
     <owners>elmah.io</owners>
     <id>elmah.io.apps.azureboards</id>
     <title>Azure Boards Integration</title>
+    <license type="expression">Apache-2.0</license>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Create an issue on Azure Boards when a new error is logged on elmah.io.</description>
     <projectUrl>https://elmah.io/</projectUrl>
     <repository type="git" url="https://github.com/elmahio/elmah.io.apps.azureboards" />
     <iconUrl>https://elmah.io/images/appstore/elmah.io.apps.azureboards.png</iconUrl>
-	<tags>Error Exception Reporting Management Logging ELMAH Diagnostics Tracing Azure DevOps</tags>
+    <tags>Error Exception Reporting Management Logging ELMAH Diagnostics Tracing Azure DevOps</tags>
   </metadata>
   <files>
     <file src="manifest.json" target="manifest.json" />
